<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="16sp"
        android:paddingBottom="16sp"
        tools:context=".SettingsActivity">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_1" />

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adView1"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/note1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/redLightTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/red_time" />

                <EditText
                    android:id="@+id/red_light_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/seconds"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yellowLightTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yellow_light_time" />

                <EditText
                    android:id="@+id/yellow_light_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/seconds"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greenLightTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/green_light_time" />

                <EditText
                    android:id="@+id/green_light_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/seconds"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="6sp"
                android:paddingBottom="6sp">

                <CheckBox
                    android:id="@+id/countdown_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="6sp"
                    android:paddingBottom="6sp"
                    android:text="@string/countdown_show" />

                <CheckBox
                    android:id="@+id/blik_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="6sp"
                    android:paddingBottom="6sp"
                    android:text="@string/blinkingGreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="6sp"
                android:paddingBottom="6sp">

                <CheckBox
                    android:id="@+id/red_after_green_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="6sp"
                    android:paddingBottom="6sp"
                    android:text="@string/redAfterGreen" />

                <CheckBox
                    android:id="@+id/yellow_with_red_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="6sp"
                    android:paddingBottom="6sp"
                    android:text="@string/yellowWithRed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="6sp"
                android:paddingBottom="6sp">

                <CheckBox
                    android:id="@+id/smile_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/showSmile" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="12sp"
                android:paddingTop="6sp"
                android:paddingBottom="6sp">

                <TextView
                    android:id="@+id/policy"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/policy" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linlay"
            android:layout_centerHorizontal="true"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_1b" />
    </RelativeLayout>
</ScrollView>