<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/redImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/redSmileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/redsmile" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/yellowImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/yellow"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/yellowSmileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/yellow"
            app:srcCompat="@drawable/yellowsmile" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/time"
            android:textSize="120sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/greenImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/green"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/greenSmileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/greensmile" />
    </RelativeLayout>

</LinearLayout>