<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/redImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/circle" />
        <ImageView
            android:id="@+id/redWImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/redwalkman" />
        <TextView
            android:id="@+id/green_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textColor="@android:color/darker_gray"
            android:textSize="180sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/greenImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/green"
            app:srcCompat="@drawable/circle" />
        <ImageView
            android:id="@+id/greenWImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/red"
            app:srcCompat="@drawable/greenwalkman" />
        <TextView
            android:id="@+id/red_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textColor="@android:color/darker_gray"
            android:textSize="180sp" />
    </RelativeLayout>

</LinearLayout>